--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 	<meta charset="UTF-8">
 	<meta name="theme-color" content="#FFFFFF"/>
 	<title>Nina Carducci photographe ile-de-france</title>
-	<meta name="description" content="Pour capturer vos moments les plus précieux et garder un souvenir impérissable.
-	Je me déplace en Île-de-France pour réaliser vos photo. Je réalise également des retouches photos et des albums personnalisés." />"
+	<meta name="description" content="Photographe en ile-de-france, je me déplace pour réaliser vos photos portrait, concert, entreprise, mariage. Je suis disponible pour shooting photo, retouches et album photo." />"
+	<meta name="robots" content="index, follow" />
 </head>
 <body>
 <div class="top-header">
-	<h3 class="name">Nina Carducci</h3>
-	<div class="nav">   
+	<h1 class="name">Nina Carducci</h1>
+	<div class="nav" role="navigation">   
 		<ul>
 			<li><a href="#about">À propos</a></li>
 			<li><a href="#gallery">Galerie</a></li>
@@ -36,20 +36,29 @@
 		</div>
 		<div class="carousel-inner">
 			<div class="carousel-item active">
-				<img src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.jpg" class="d-block w-100" alt="photo d'un homme marchant dans la rue">
+             <img srcset="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash_min.webp 375w,
+						 ./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-max.webp 1900w"
+	        src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash_min.webp" class="d-block w-100" sizes="100vw"
+	        alt="photo d'un homme traversant un passage piéton">
 			</div>
 			<div class="carousel-item">
-				<img src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.jpg" class="d-block w-100" alt="photo d'une foule à un concertt">
+			<img srcset="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash-max.webp 1200w,
+			                        ./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash_min.webp 375w"
+				src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash_min.webp" class="d-block w-100" sizes="100vw"
+				loading="lazy" alt="photo d'une foule à un concert">
 			</div>
 			<div class="carousel-item">
-				<img src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.jpg" class="d-block w-100" alt="photo de deux personnes s'embrassant à leur mariage">
+				<img srcset="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash-max.webp 1200w,
+			                        ./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash_min.webp 375w"
+					src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash_min.webp" class="d-block w-100" sizes="100vw"
+					loading="lazy" alt="photo de deux personnes s'embrassant à leur mariage">
 			</div>
 		</div>
-		<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+		<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev" aria-label="Image précédente">
 			<span class="carousel-control-prev-icon" aria-hidden="true"></span>
 			<span class="visually-hidden">Previous</span>
 		</button>
-		<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+		<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next" aria-label="Image suivante">
 			<span class="carousel-control-next-icon" aria-hidden="true"></span>
 			<span class="visually-hidden">Next</span>
 		</button>
@@ -57,11 +66,11 @@
 </div>
 <div id="about">
 	<div class="picture left">
-		<img src="./assets/images/nina.png" alt="portrait de Nina la photographe">
+		<img src="./assets/images/nina.webp" alt="portrait de Nina la photographe" loading="lazy">
 	</div>
 	<div id="about-me">
-		<h3 class="about-me__title">A propos de moi</h3>
-		<h6 class="about-me__introduction">Devenir photographe était pour moi une évidence. Comme si j’y étais prédestiné. Saisir un moment, une émotion, une situation, un endroit, une lumière et les rendre immortels, voilà ce qui me fait vibrer.</h6>
+		<h2 class="about-me__title">A propos de moi</h2>
+		<h3 class="about-me__introduction">Devenir photographe était pour moi une évidence. Comme si j’y étais prédestiné. Saisir un moment, une émotion, une situation, un endroit, une lumière et les rendre immortels, voilà ce qui me fait vibrer.</h3>
 		<p>Nous passons notre vie à chercher le bonheur, et lorsque nous y touchons, nous n’avons qu’une envie : le figer au travers de photographies pour le savourer avec les personnes qui sont importantes à nos yeux, ou le partager au plus grand nombre.
 			C’est ce que je vous propose : saisir ces merveilleux moments au travers de mon regard, mon approche, ma technique. Rendre ces moments immortels, afin que vous puissiez y puiser de l’amour, du bonheur, de la tendresse et de lumière à chaque fois que vous poserez les yeux sur vos photos.</p>
 	</div>
@@ -70,21 +79,59 @@
 	<h3 class="title">Portfolio</h3>
 	<div class="container py-3">
 		<div class="gallery" style="display: none">
-			<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash.jpg" alt="photo d'un concert"/>
-			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash.jpg" alt="portrait d'un chef d'entreprise"/>
-			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash.jpg" alt="portrait d'une mariée en préparation"/>
-			<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash.jpg" alt="portrait de mains qui se touchent à un mariage"/>
-			<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash.jpg" alt="portrait d'un homme"/>
-			<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash.jpg"alt="portrait de deux jeunes mariés" />
-			<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash.jpg" alt="portrait d'une femme"/>
-			<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash.jpg" alt="portrait d'un chanteur lors d'un concert"/>
-			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.jpg" alt="portrait d'une femme en entreprise"/>
-		</div>
+
+<img data-gallery-tag="Concert" class="gallery-item" 
+srcset="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash-min.webp 375w,
+./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash-max.webp 1200w"
+	src="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash-min.webp" alt="photo d'un concert"
+	loading="lazy" />
+
+<img data-gallery-tag="Entreprises" class="gallery-item" srcset="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash-max.webp 1200w,
+             ./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash-min.webp 375w"
+	src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash-min.webp"
+	alt="portrait d'un chef d'entreprise" loading="lazy" />
+
+<img data-gallery-tag="Entreprises" class="gallery-item" srcset="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash-max.webp 1200w,
+             ./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash-min.webp 375w"
+	src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash-min.webp"
+	alt="portrait d'une mariée en préparation" loading="lazy" />
+
+<img data-gallery-tag="Mariages" class="gallery-item" srcset="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash-max.webp 1200w,
+             ./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash-min.webp 375w"
+	src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash-min.webp"
+	alt="portrait de mains qui se touchent à un mariage" loading="lazy" />
+
+<img data-gallery-tag="Portrait" class="gallery-item" srcset="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash-max.webp 1200w,
+             ./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash-min.webp 375w"
+	src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash-min.webp" alt="portrait d'un homme"
+	loading="lazy" />
+
+<img data-gallery-tag="Mariages" class="gallery-item" srcset="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash-max.webp 1200w,
+             ./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash-min.webp 375w"
+	src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash-min.webp" alt="portrait de deux jeunes mariés"
+	loading="lazy" />
+
+<img data-gallery-tag="Portrait" class="gallery-item" srcset="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash-max.webp 1200w,
+             ./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash-min.webp 375w"
+	src="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash-min.webp"
+	alt="portrait d'une femme" loading="lazy" />
+
+<img data-gallery-tag="Concert" class="gallery-item" srcset="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash-max.webp 1200w,
+             ./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash-min.webp 375w"
+	src="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash-min.webp"
+	alt="portrait d'un chanteur lors d'un concert" loading="lazy" />
+
+<img data-gallery-tag="Entreprises" class="gallery-item" srcset="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash-max.webp 1200w,
+             ./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash-min.webp 375w"
+	src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash-min.webp"
+	alt="portrait d'une femme en entreprise" loading="lazy" />
+
+</div>
 	</div>
 	<div class="quote">
 		<figure>
 			<blockquote>
-				<h1 class="quote__text">Un portrait n’est pas une ressemblance. Dès lors qu’une émotion ou qu’un fait est traduit en photo, il cesse d’être un fait pour devenir une opinion. L’inexactitude n’existe pas en photographie. Toutes les photos sont exactes. Aucune d’elles n’est la vérité.</h1>
+				<h3 class="quote__text">Un portrait n’est pas une ressemblance. Dès lors qu’une émotion ou qu’un fait est traduit en photo, il cesse d’être un fait pour devenir une opinion. L’inexactitude n’existe pas en photographie. Toutes les photos sont exactes. Aucune d’elles n’est la vérité.</h3>
 			</blockquote>
 			<figcaption class="quote__author">- Richard Avedon</figcaption>
 		</figure>
@@ -129,7 +176,7 @@
 <div class="quote">
 	<figure>
 		<blockquote>
-			<h1 class="quote__text">De manière inconsciente, je crois, je guette un regard, une expression, des traits ou une nostalgie capable de résumer ou plus exactement de révéler une vie</h1>
+			<h3 class="quote__text">De manière inconsciente, je crois, je guette un regard, une expression, des traits ou une nostalgie capable de résumer ou plus exactement de révéler une vie</h3>
 		</blockquote>
 		<figcaption class="quote__author">- Richard Avedon</figcaption>
 	</figure>
@@ -140,20 +187,46 @@
 			<h3>Une question ? Une demande de devis ?</h3>
 			<p> N’hésitez pas à m’écrire ! Je vous répondrais en moins de 24 heures</p>
 			<form action="" method="post">
-				<label>Nom</label>
-				<input type="text" name="nom" id="nom">
-				<label>Email</label>
-				<input type="email" name="email" id="email">
-				<label>Message</label>
-				<textarea name="message" id="message" cols="30" rows="10"></textarea>
-				<input type="submit" value="Envoyer"/>
+                <label for="nom">Nom</label aria-labelledby="nom">
+                <input type="text" name="nom" id="nom">
+                <label for="email">Email</label>
+                <input type="email" name="email" id="email" aria-labelledby="email">
+                <label for="message">Message</label>
+                <textarea name="message" id="message" cols="30" rows="10" aria-labelledby="message"></textarea>
+                <input type="submit" value="Envoyer" />
 			</form>
 		</div>
 		<div class="picture right">
-			<img src="./assets/images/camera.png" alt="portait d'un appareil photo">
+			<img src="./assets/images/camera.webp" alt="portait d'un appareil photo" loading="lazy">
 		</div>
 	</div>
 </div>
+    <script type="application/ld+json">
+	{
+		"@context" : "https://schema.org",
+		"@type" : "LocalBusiness",
+		"name" : "Nina Carducci",
+		"image" : "https://root-c137.github.io/NinaCarducci/assets/images/nina.webp",
+		"description" : "Photographe professionnelle en île-de-France",
+		"address" : {
+			"@type" : "PostalAddress",
+			"streetAddress" : "68 avenue Alsace-Lorraine, 33200 Bordeaux",
+			"addressLocality" : "Bordeaux",
+			"postalCode" : "33200",
+			"addressCountry" : "FR"
+		},
+
+		"telephone" : "05 56 67 78 89",
+		"url" : "https://root-c137.github.io/NinaCarducci/",
+		"priceRange" : "de 50€ à 400€",
+		"openingHoursSpecification" : {
+			"@type" :  "OpeningHoursSpecification",
+			"dayOfWeek" : ["Monday", "Tuesday", "Wednesday", "Thursday", "Friday"],
+			"opens" : "10:00",
+			"closes" : "19:00"
+		}
+	}
+    </script>
 	<script src="./assets/bootstrap/bootstrap.bundle.js"></script>
 	<script src="https://code.jquery.com/jquery-3.4.1.min.js"
 		integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
