--- a/index.html
+++ b/index.html
@@ -1,17 +1,21 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
+	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.css">
+	<title>Nina Carducci photographe ile-de-france</title>
+	<meta name="description"
+		content="Photographe en Île-de-France, je me déplace pour réaliser vos photos portrait, concert, entreprise, mariage. Je suis disponible pour shooting photo, retouches et album photo.">
+	<meta name="theme-color" content="#FFFFFF">
+	<meta name="robots" content="index, follow">
+    <link rel="preload" as="style" href="./assets/bootstrap/bootstrap.min.css" onload="this.onload=null;this.rel='stylesheet'">
 	<link rel="stylesheet" href="./assets/style.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap" rel="stylesheet">
-	<meta charset="UTF-8">
-	<meta name="theme-color" content="#FFFFFF"/>
-	<title>Nina Carducci photographe ile-de-france</title>
-	<meta name="description" content="Photographe en ile-de-france, je me déplace pour réaliser vos photos portrait, concert, entreprise, mariage. Je suis disponible pour shooting photo, retouches et album photo." />"
-	<meta name="robots" content="index, follow" />
+    <link rel="preload"
+	href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap"
+	as="style" onload="this.onload=null;this.rel='stylesheet'">
+
 </head>
 <body>
 <div class="top-header">
@@ -36,20 +40,20 @@
 		</div>
 		<div class="carousel-inner">
 			<div class="carousel-item active">
-             <img srcset="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash_min.webp 375w,
-						 ./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-max.webp 1900w"
+             <img srcset="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash_min.webp 500w,
+						 ./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-max.webp 1200w"
 	        src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash_min.webp" class="d-block w-100" sizes="100vw"
 	        alt="photo d'un homme traversant un passage piéton">
 			</div>
 			<div class="carousel-item">
 			<img srcset="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash-max.webp 1200w,
-									 ./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash_min.webp 375w"
+									 ./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash_min.webp 500w"
 				src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash_min.webp" class="d-block w-100" sizes="100vw"
 				loading="lazy" alt="photo d'une foule à un concert">
 			</div>
 			<div class="carousel-item">
 				<img srcset="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash-max.webp 1200w,
-									 ./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash_min.webp 375w"
+									 ./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash_min.webp 500w"
 					src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash_min.webp" class="d-block w-100" sizes="100vw"
 					loading="lazy" alt="photo de deux personnes s'embrassant à leur mariage">
 			</div>
@@ -81,48 +85,48 @@
 		<div class="gallery" style="display: none">
 
 <img data-gallery-tag="Concert" class="gallery-item" 
-srcset="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash-min.webp 375w,
+srcset="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash-min.webp 500w,
 ./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash-max.webp 1200w"
 	src="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash-min.webp" alt="photo d'un concert"
 	loading="lazy" />
 
 <img data-gallery-tag="Entreprises" class="gallery-item" srcset="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash-max.webp 1200w,
-             ./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash-min.webp 375w"
+             ./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash-min.webp 500w"
 	src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash-min.webp"
 	alt="portrait d'un chef d'entreprise" loading="lazy" />
 
 <img data-gallery-tag="Entreprises" class="gallery-item" srcset="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash-max.webp 1200w,
-             ./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash-min.webp 375w"
+             ./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash-min.webp 500w"
 	src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash-min.webp"
 	alt="portrait d'une mariée en préparation" loading="lazy" />
 
 <img data-gallery-tag="Mariages" class="gallery-item" srcset="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash-max.webp 1200w,
-             ./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash-min.webp 375w"
+             ./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash-min.webp 500w"
 	src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash-min.webp"
 	alt="portrait de mains qui se touchent à un mariage" loading="lazy" />
 
 <img data-gallery-tag="Portrait" class="gallery-item" srcset="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash-max.webp 1200w,
-             ./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash-min.webp 375w"
+             ./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash-min.webp 500w"
 	src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash-min.webp" alt="portrait d'un homme"
 	loading="lazy" />
 
 <img data-gallery-tag="Mariages" class="gallery-item" srcset="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash-max.webp 1200w,
-             ./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash-min.webp 375w"
+             ./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash-min.webp 500w"
 	src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash-min.webp" alt="portrait de deux jeunes mariés"
 	loading="lazy" />
 
 <img data-gallery-tag="Portrait" class="gallery-item" srcset="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash-max.webp 1200w,
-             ./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash-min.webp 375w"
+             ./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash-min.webp 500w"
 	src="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash-min.webp"
 	alt="portrait d'une femme" loading="lazy" />
 
 <img data-gallery-tag="Concert" class="gallery-item" srcset="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash-max.webp 1200w,
-             ./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash-min.webp 375w"
+             ./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash-min.webp 500w"
 	src="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash-min.webp"
 	alt="portrait d'un chanteur lors d'un concert" loading="lazy" />
 
 <img data-gallery-tag="Entreprises" class="gallery-item" srcset="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash-max.webp 1200w,
-             ./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash-min.webp 375w"
+             ./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash-min.webp 500w"
 	src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash-min.webp"
 	alt="portrait d'une femme en entreprise" loading="lazy" />
 
@@ -227,10 +231,11 @@ srcset="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash-min.web
 		}
 	}
     </script>
-	<script src="./assets/bootstrap/bootstrap.bundle.js"></script>
+	<script defer src="./assets/bootstrap/bootstrap.bundle.min.js"></script>
 	<script src="https://code.jquery.com/jquery-3.4.1.min.js"
 		integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-	<script src="./assets/maugallery.js"></script>
-	<script src="./assets/scripts.js"></script>
+	<script defer src="./assets/maugallery.js"></script>
+	<script defer src="./assets/scripts.js"></script>
+	
 </body>
 </html>
