--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 		content="Photographe en Île-de-France, je me déplace pour réaliser vos photos portrait, concert, entreprise, mariage. Je suis disponible pour shooting photo, retouches et album photo.">
 	<meta name="theme-color" content="#FFFFFF">
 	<meta name="robots" content="index, follow">
+	<link rel="icon" type="image/png" href="./assets/images/camera.svg" />
     <link rel="preload" as="style" href="./assets/bootstrap/bootstrap.min.css" onload="this.onload=null;this.rel='stylesheet'">
 	<link rel="stylesheet" href="./assets/style.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
