bootstrap css cleaning

--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@ srcset="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash-min.web
 		</div>
 	</div>
 </div>
-    <script type="application/ld+json">
+    <script defer type="application/ld+json">
 	{
 		"@context" : "https://schema.org",
 		"@type" : "LocalBusiness",
