performance improvement on pictures

--- a/index.html
+++ b/index.html
@@ -44,9 +44,10 @@
 		</div>
 		<div class="carousel-inner">
 			<div class="carousel-item active">
+				<picture>
              <img srcset="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash_min.webp 500w,
 						 ./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-max.webp 1200w"
-	        src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash_min.webp" class="d-block w-100" sizes="100vw"
+	        src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash_min.webp" class="d-block w-100" fetchpriority="high" sizes="100vw"
 	        alt="photo d'un homme traversant un passage piéton">
 			</div>
 			<div class="carousel-item">
@@ -62,6 +63,7 @@
 					loading="lazy" alt="photo de deux personnes s'embrassant à leur mariage">
 			</div>
 		</div>
+		</picture>
 		<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev" aria-label="Image précédente">
 			<span class="carousel-control-prev-icon" aria-hidden="true"></span>
 			<span class="visually-hidden">Previous</span>
@@ -74,7 +76,9 @@
 </div>
 <div id="about">
 	<div class="picture left">
+		<picture>
 		<img src="./assets/images/nina.webp" alt="portrait de Nina la photographe" loading="lazy">
+		</picture>
 	</div>
 	<div id="about-me">
 		<h2 class="about-me__title">A propos de moi</h2>
@@ -87,7 +91,7 @@
 	<h3 class="title">Portfolio</h3>
 	<div class="container py-3">
 		<div class="gallery" style="display: none">
-
+			
 <img data-gallery-tag="Concert" class="gallery-item" 
 srcset="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash-min.webp 500w,
 ./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash-max.webp 1200w"
@@ -133,7 +137,6 @@ srcset="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash-min.web
              ./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash-min.webp 500w"
 	src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash-min.webp"
 	alt="portrait d'une femme en entreprise" loading="lazy" />
-
 </div>
 	</div>
 	<div class="quote">
