lighthouse alert fixed

--- a/index.html
+++ b/index.html
@@ -47,19 +47,19 @@
 				<picture>
              <img srcset="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash_min.webp 500w,
 						 ./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-max.webp 1200w"
-	        src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash_min.webp" class="d-block w-100" fetchpriority="high" sizes="100vw"
+	        src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash_min.webp" class="d-block w-100" fetchpriority="high" sizes="100vw" type="image/webp"
 	        alt="photo d'un homme traversant un passage piéton">
 			</div>
 			<div class="carousel-item">
 			<img srcset="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash-max.webp 1200w,
 									 ./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash_min.webp 500w"
-				src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash_min.webp" class="d-block w-100" sizes="100vw"
+				src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash_min.webp" class="d-block w-100" sizes="100vw" type="image/webp"
 				loading="lazy" alt="photo d'une foule à un concert">
 			</div>
 			<div class="carousel-item">
 				<img srcset="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash-max.webp 1200w,
 									 ./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash_min.webp 500w"
-					src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash_min.webp" class="d-block w-100" sizes="100vw"
+					src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash_min.webp" class="d-block w-100" sizes="100vw" type="image/webp"
 					loading="lazy" alt="photo de deux personnes s'embrassant à leur mariage">
 			</div>
 		</div>
@@ -76,9 +76,9 @@
 </div>
 <div id="about">
 	<div class="picture left">
-		<picture>
-		<img src="./assets/images/nina.webp" alt="portrait de Nina la photographe" loading="lazy">
-		</picture>
+	<img srcset="./assets/images/nina-min.webp 500w,
+	             ./assets/images/nina.webp 1200w" src="./assets/images/nina-min.webp" class="d-block w-100"
+		loading="lazy" sizes="100vw" type="image/webp" alt="portrait de Nina la photographe">
 	</div>
 	<div id="about-me">
 		<h2 class="about-me__title">A propos de moi</h2>
@@ -95,47 +95,47 @@
 <img data-gallery-tag="Concert" class="gallery-item" 
 srcset="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash-min.webp 500w,
 ./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash-max.webp 1200w"
-	src="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash-min.webp" alt="photo d'un concert"
+	src="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash-min.webp" alt="photo d'un concert" type="image/webp"
 	loading="lazy" />
 
 <img data-gallery-tag="Entreprises" class="gallery-item" srcset="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash-max.webp 1200w,
              ./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash-min.webp 500w"
-	src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash-min.webp"
+	src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash-min.webp" type="image/webp"
 	alt="portrait d'un chef d'entreprise" loading="lazy" />
 
 <img data-gallery-tag="Entreprises" class="gallery-item" srcset="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash-max.webp 1200w,
              ./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash-min.webp 500w"
-	src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash-min.webp"
+	src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash-min.webp" type="image/webp"
 	alt="portrait d'une mariée en préparation" loading="lazy" />
 
 <img data-gallery-tag="Mariages" class="gallery-item" srcset="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash-max.webp 1200w,
              ./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash-min.webp 500w"
-	src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash-min.webp"
+	src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash-min.webp" type="image/webp"
 	alt="portrait de mains qui se touchent à un mariage" loading="lazy" />
 
 <img data-gallery-tag="Portrait" class="gallery-item" srcset="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash-max.webp 1200w,
              ./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash-min.webp 500w"
-	src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash-min.webp" alt="portrait d'un homme"
+	src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash-min.webp" type="image/webp" alt="portrait d'un homme"
 	loading="lazy" />
 
 <img data-gallery-tag="Mariages" class="gallery-item" srcset="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash-max.webp 1200w,
              ./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash-min.webp 500w"
-	src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash-min.webp" alt="portrait de deux jeunes mariés"
+	src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash-min.webp" type="image/webp" alt="portrait de deux jeunes mariés"
 	loading="lazy" />
 
 <img data-gallery-tag="Portrait" class="gallery-item" srcset="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash-max.webp 1200w,
              ./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash-min.webp 500w"
-	src="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash-min.webp"
+	src="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash-min.webp" type="image/webp"
 	alt="portrait d'une femme" loading="lazy" />
 
 <img data-gallery-tag="Concert" class="gallery-item" srcset="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash-max.webp 1200w,
              ./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash-min.webp 500w"
-	src="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash-min.webp"
+	src="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash-min.webp" type="image/webp"
 	alt="portrait d'un chanteur lors d'un concert" loading="lazy" />
 
 <img data-gallery-tag="Entreprises" class="gallery-item" srcset="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash-max.webp 1200w,
              ./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash-min.webp 500w"
-	src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash-min.webp"
+	src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash-min.webp" type="image/webp"
 	alt="portrait d'une femme en entreprise" loading="lazy" />
 </div>
 	</div>
@@ -198,10 +198,10 @@ srcset="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash-min.web
 			<h3>Une question ? Une demande de devis ?</h3>
 			<p> N’hésitez pas à m’écrire ! Je vous répondrais en moins de 24 heures</p>
 			<form action="" method="post">
-                <label for="nom">Nom</label aria-labelledby="nom">
+                <label for="nom">Nom</label aria-labelledby="nom" autocomplete="name">
                 <input type="text" name="nom" id="nom">
                 <label for="email">Email</label>
-                <input type="email" name="email" id="email" aria-labelledby="email">
+                <input type="email" name="email" id="email" aria-labelledby="email" autocomplete="email">
                 <label for="message">Message</label>
                 <textarea name="message" id="message" cols="30" rows="10" aria-labelledby="message"></textarea>
                 <input type="submit" value="Envoyer" />
