first slide optimization

--- a/index.html
+++ b/index.html
@@ -5,9 +5,27 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Nina Carducci photographe ile-de-france</title>
 	<meta name="description"
-		content="Photographe en Île-de-France, je me déplace pour réaliser vos photos portrait, concert, entreprise, mariage. Je suis disponible pour shooting photo, retouches et album photo.">
+	content="Photographe en Île-de-France, je me déplace pour réaliser vos photos portrait, concert, entreprise, mariage. Je suis disponible pour shooting photo, retouche photo et album photo.">
 	<meta name="theme-color" content="#FFFFFF">
 	<meta name="robots" content="index, follow">
+
+	<!-- Twitter Card data -->
+	<meta name="twitter:card" content="summary" />
+	<meta name="twitter:site" content="https://ninacarducci.github.io/" />
+	<meta name="twitter:title" content="Photographe Nina Carducci - Île-de-France" />
+	<meta name="twitter:description" content="Photographe en Île-de-France, je me déplace pour réaliser vos photos portrait, concert, entreprise, mariage. Je suis disponible pour shooting photo, retouche photo et album photo." />
+	<meta name="twitter:creator" content="@NinaCarducci" />
+	<meta name="twitter:image" content="https://root-c137.github.io/NinaCarducci/assets/images/nina.png" />
+		
+	<!-- Open Graph data -->
+	<meta property="og:title" content="Photographe Nina Carducci - Île-de-France" />
+	<meta property="og:type" content="website" />
+	<meta property="og:url" content="https://ninacarducci.github.io/" />
+	<meta property="og:image" content="https://ninacarducci.github.io/assets/images/nina.png" />
+	<meta property="og:description"
+	content="Photographe en Île-de-France, je me déplace pour réaliser vos photos portrait, concert, entreprise, mariage. Je suis disponible pour shooting photo, retouche photo et album photo." />
+
+
 	<link rel="icon" type="image/png" href="./assets/images/camera.svg" />
     <link rel="preload" as="style" href="./assets/bootstrap/bootstrap.min.css" onload="this.onload=null;this.rel='stylesheet'">
 	<link rel="stylesheet" href="./assets/style.css">
@@ -217,7 +235,7 @@ srcset="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash-min.web
 		"@context" : "https://schema.org",
 		"@type" : "LocalBusiness",
 		"name" : "Nina Carducci",
-		"image" : "https://root-c137.github.io/NinaCarducci/assets/images/nina.webp",
+		"image" : "https://ninacarducci.github.io/assets/images/nina.png",
 		"description" : "Photographe professionnelle en île-de-France",
 		"address" : {
 			"@type" : "PostalAddress",
@@ -228,7 +246,7 @@ srcset="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash-min.web
 		},
 
 		"telephone" : "05 56 67 78 89",
-		"url" : "https://root-c137.github.io/NinaCarducci/",
+		"url" : "https://ninacarducci.github.io/",
 		"priceRange" : "de 50€ à 400€",
 		"openingHoursSpecification" : {
 			"@type" :  "OpeningHoursSpecification",
