--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Nina Carducci photographe ile-de-france</title>
 	<meta name="description"
-	content="Photographe en Île-de-France, je me déplace pour réaliser vos photos portrait, concert, entreprise, mariage. Je suis disponible pour shooting photo, retouche photo et album photo.">
+	content="Photographe en Île-de-France et Paris, je me déplace pour réaliser vos photos portrait, concert, entreprise, mariage. Je suis disponible pour shooting photo, retouche photo et album photo.">
 	<meta name="theme-color" content="#FFFFFF">
 	<meta name="robots" content="index, follow">
 
@@ -29,13 +29,11 @@
 	<link rel="icon" type="image/png" href="./assets/images/camera.svg" />
     <link rel="preload" as="style" href="./assets/bootstrap/bootstrap.min.css" onload="this.onload=null;this.rel='stylesheet'">
 	<link rel="stylesheet" href="./assets/style.css">
-		<link rel="preload"
-			href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap"
-			as="style" onload="this.onload=null;this.rel='stylesheet'">
-		<noscript>
-			<link rel="stylesheet"
+	<link rel="preload"
+	    href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap"
+		as="style" onload="this.onload=null;this.rel='stylesheet'">
+	<link rel="stylesheet"
 				href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap">
-		</noscript>
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 </head>
