image height width fix

--- a/index.html
+++ b/index.html
@@ -108,6 +108,9 @@
 	             ./assets/images/nina.webp 1200w" src="./assets/images/nina-min.webp" class="d-block w-100" loading="lazy"
 				sizes="100vw"
 				type="image/webp" 
+				width="375"
+				height="375" 
+				style="max-width: 100%; height: auto"
 				alt="portrait de Nina la photographe">
 		</div>
 		<div id="about-me">
