height width slider fix

--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
 						 ./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-max.webp 1200w"
 							src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash_min.webp" class="d-block w-100"
 							fetchpriority="high" sizes="100vw" type="image/webp"
+							width="1921" height="888" style="max-width: 100%; height: auto"
 							alt="photo d'un homme traversant un passage piéton">
 				</div>
 				<div class="carousel-item">
@@ -253,7 +254,8 @@
 				</form>
 			</div>
 			<div class="picture right">
-				<img src="./assets/images/camera.webp" alt="portait d'un appareil photo" loading="lazy">
+				<img src="./assets/images/camera.webp" alt="portait d'un appareil photo" loading="lazy"
+				width="417" height="417" style="max-width: 100%; height: auto;">
 			</div>
 		</div>
 	</div>
